feat: add ended games page
